# dcc-mcp-katana

./: CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release.yml
src/dcc_mcp_katana/: __init__.py  dispatcher.py  plugin.py  server.py
src/dcc_mcp_katana/katana_plugin/Plugins/: dcc_mcp_katana.py
src/dcc_mcp_katana/skills/katana-nodegraph/: SKILL.md  tools.yaml
src/dcc_mcp_katana/skills/katana-nodegraph/scripts/: inspect_nodegraph.py  list_nodes.py  save_project.py
tests/: test_package.py
tools/: lint_skills.py
