[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "dcc-mcp-katana"
version = "0.1.0"
description = "MCP adapter for Foundry Katana"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "loonghao", email = "hal.long@outlook.com" }]
classifiers = ["Development Status :: 3 - Alpha", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12"]
dependencies = ["dcc-mcp-core>=0.19.13,<1.0.0"]

[project.urls]
Homepage = "https://github.com/dcc-mcp/dcc-mcp-katana"
Repository = "https://github.com/dcc-mcp/dcc-mcp-katana"

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8", "ruff>=0.8", "twine>=6"]

[project.entry-points."dcc_mcp.adapters"]
katana = "dcc_mcp_katana:KatanaMcpServer"

[tool.hatch.build.targets.wheel]
packages = ["src/dcc_mcp_katana"]
artifacts = ["src/dcc_mcp_katana/skills/**", "src/dcc_mcp_katana/katana_plugin/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
